- edit bds page

--- a/src/bds/vinhomes-golden-avenue-mong-cai.ejs
+++ b/src/bds/vinhomes-golden-avenue-mong-cai.ejs
@@ -28,7 +28,7 @@
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
-      <%- include('../partial/header.ejs', { page: 'bat-dong-san' , lang: 'vi' , engPage: 'en/bat-dong-san-en.html' })
+      <%- include('../partial/header.ejs', { page: 'bat-dong-san' , lang: 'vi' , engPage: 'en/project.html' })
         %>
         <div class="content ">
           <div class="content_inner  ">
