--- a/src/en/project.ejs
+++ b/src/en/project.ejs
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - DỰ ÁN</title>
+  <title>MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY - DỰ ÁN</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-  <link rel="canonical" href="/bat-dong-san/" />
+  <link rel="canonical" href="/en/project/" />
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:locale:alternate" content="en_US" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Dự án" />
-  <meta property="og:url" content="/bat-dong-san/" />
+  <meta property="og:title" content="Projects" />
+  <meta property="og:url" content="/en/project/" />
   <meta property="og:site_name" content="Minh Anh Group" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Dự án" />
-  <%- include('partial/head.ejs') %>
+  <meta name="twitter:title" content="Projects" />
+  <%- include('../partial/head.ejs') %>
   <style id='stylesheet-inline-css' type='text/css'>
     .page-id-97.disabled_footer_top .footer_top_holder,
     .page-id-97.disabled_footer_bottom .footer_bottom_holder {
@@ -28,7 +28,7 @@
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
-      <%- include('partial/header.ejs', { page: 'bat-dong-san', lang: 'vi', engPage: 'en/project.html' }) %>
+      <%- include('../partial/header.ejs', { page: 'project', lang: 'en', viPage: '/bat-dong-san.html' }) %>
       <div class="content ">
         <div class="content_inner  ">
           <div class="title_outer title_without_animation with_image" style="height: 120px;" data-height="180">
@@ -196,10 +196,10 @@
         </div>
         <div class="hotline-bar"> <a href="tel:xxxxxxxx"><span class="text-hotline">xxxxxxxx</span></a> </div>
       </div>
-      <%- include('partial/footer.ejs', {lang: 'vi'}) %>
+      <%- include('../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
-  <%- include('partial/bodyAssets.ejs') %>
+  <%- include('../partial/bodyAssets.ejs') %>
 </body>
 
 </html>
