--- a/src/gioi-thieu.ejs
+++ b/src/gioi-thieu.ejs
@@ -383,7 +383,43 @@
                     </div>
                   </div>
                 </div>
-              </div>              
+              </div>     
+              
+              <div class="vc_row wpb_row section vc_row-fluid  nong_san_tho_row" style=' padding-top: 50px; text-align:left;'>
+                <div class=" full_section_inner clearfix">
+                  <div
+                    class="wpb_animate_when_almost_visible wpb_slideInLeft slideInLeft wpb_column vc_column_container vc_col-sm-6">
+                    <div class="vc_column-inner vc_custom_1527655478407">
+                      <div class="wpb_wrapper">
+                        <div class="wpb_single_image wpb_content_element vc_align_left   nong_san_img_1">
+                          <div class="wpb_wrapper">
+                            <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="994" height="902"
+                                src="assets/img/gioi-thieu/organization.png"
+                                class="vc_single_image-img attachment-full" alt=""
+                                srcset="assets/img/gioi-thieu/organization.png 994w, assets/img/gioi-thieu/organization.png 300w, assets/img/gioi-thieu/organization.png 768w, assets/img/gioi-thieu/organization.png 700w"
+                                sizes="(max-width: 994px) 100vw, 994px" /></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div
+                    class="wpb_animate_when_almost_visible wpb_slideInRight slideInRight wpb_column vc_column_container vc_col-sm-6">
+                    <div class="vc_column-inner vc_custom_1527655481830">
+                      <div class="wpb_wrapper">
+                        <div class="wpb_text_column wpb_content_element  nong_san_tho_text">
+                          <div class="wpb_wrapper">
+                            <h3>Cơ cấu tổ chức</h3>
+                            <p>Công ty Cổ phần Đầu tư Công nghệ Minh Anh ( Minh Anh Group ) là doanh nghiệp hàng đầu trong lĩnh vực Thương mại hàng Nông sản, Nguyên liệu thô, Premix và Chất phụ gia sử dụng trong ngành sản xuất thức chăn nuôi tại Việt Nam.</p>
+                            <p>Trong suốt chặng đường hình thành và phát triển, Minh Anh Group đã dần khẳng định vị thế của mình trên thương trường thông qua việc trở thành Nhà phân phối độc quyền của những thương hiệu lớn trên thế giới như DSM, Diamond V, Olmix, Massel …&#8230;</p>
+                            <p>Với tiềm lực mạnh mẽ, đội ngũ nhân viên giàu kỹ năng, kinh nghiệm trong ngành chăn nuôi chính là cơ sở vững chắc để Minh Anh Group phát triển bền vững &amp; lâu dài.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>  
           
               <div class="vc_row wpb_row section vc_row-fluid  gia_tri_row grid_section"
                 style='background-image:url(assets/img/gioi-thieu/gia_Tri_cot_loi.png); text-align:left;'>
