--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -70,7 +70,7 @@
                     class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
                 </li>
                 <li id="mobile-menu-item-195" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'bat-dong-san' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
-                  href="/bat-dong-san.html" class="<%= page === 'bat-dong-san' ? 'current' : '' %>"><span>Dự án BĐS</span></a><span
+                  href="/bat-dong-san.html" class="<%= page === 'bat-dong-san' ? 'current' : '' %>"><span>Dự án</span></a><span
                   class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
               </li>
                 <li id="mobile-menu-item-93" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'doi-tac-chien-luoc' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
@@ -100,7 +100,7 @@
                 Phẩm</span><span class="plus"></span></a></li>
           <li id="nav-menu-item-195" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'bat-dong-san' ? 'current-menu-item current_page_item active' : '' %>"><a
             href="/bat-dong-san.html" class="<%= page === 'bat-dong-san' ? 'current' : '' %>"><i class="menu_icon blank fa"></i><span>Dự án 
-              BĐS</span><span class="plus"></span></a></li>
+              </span><span class="plus"></span></a></li>
           <li id="nav-menu-item-93" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'doi-tac-chien-luoc' ? 'current-menu-item current_page_item active' : '' %>"><a
               href="/doi-tac-chien-luoc.html" class="<%= page === 'doi-tac-chien-luoc' ? 'current' : '' %>"><i
                 class="menu_icon blank fa"></i><span>Đối Tác Chiến Lược</span><span class="plus"></span></a></li>
@@ -185,6 +185,10 @@
                     href="/en/product.html" class="<%= page === 'product' ? 'current' : '' %>"><span>Products</span></a><span
                     class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
                 </li>
+                <li id="mobile-menu-item-469" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'project' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
+                  href="/en/project.html" class="<%= page === 'project' ? 'current' : '' %>"><span>Projects</span></a><span
+                  class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
+              </li>
                 <li id="mobile-menu-item-466" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'partner' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
                     href="/en/partner.html" class="<%= page === 'partner' ? 'current' : '' %>"><span>Partner</span></a><span
                     class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
@@ -210,6 +214,9 @@
           <li id="nav-menu-item-469" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'product' ? 'current-menu-item current_page_item active' : '' %>"><a
               href="/en/product.html" class="<%= page === 'product' ? 'current' : '' %>"><i
                 class="menu_icon blank fa"></i><span>Products</span><span class="plus"></span></a></li>
+          <li id="nav-menu-item-469" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'project' ? 'current-menu-item current_page_item active' : '' %>"><a
+            href="/en/project.html" class="<%= page === 'project' ? 'current' : '' %>"><i
+              class="menu_icon blank fa"></i><span>Projects</span><span class="plus"></span></a></li>
           <li id="nav-menu-item-466" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'partner' ? 'current-menu-item current_page_item active' : '' %>"><a
               href="/en/partner.html" class="<%= page === 'partner' ? 'current' : '' %>"><i
                 class="menu_icon blank fa"></i><span>Partner</span><span class="plus"></span></a></li>
