update page detail in bds

--- a/src/en/project.ejs
+++ b/src/en/project.ejs
@@ -15,6 +15,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Projects" />
   <%- include('../partial/head.ejs') %>
+  <link rel="stylesheet" href="/assets/css/bds.css">
   <style id='stylesheet-inline-css' type='text/css'>
     .page-id-97.disabled_footer_top .footer_top_holder,
     .page-id-97.disabled_footer_bottom .footer_bottom_holder {
