--- a/src/gioi-thieu.ejs
+++ b/src/gioi-thieu.ejs
@@ -394,9 +394,9 @@
                         <div class="wpb_single_image wpb_content_element vc_align_left   nong_san_img_1">
                           <div class="wpb_wrapper">
                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="994" height="902"
-                                src="assets/img/gioi-thieu/organization.png"
+                                src="assets/img/gioi-thieu/organization.jpg"
                                 class="vc_single_image-img attachment-full" alt=""
-                                srcset="assets/img/gioi-thieu/organization.png 994w, assets/img/gioi-thieu/organization.png 300w, assets/img/gioi-thieu/organization.png 768w, assets/img/gioi-thieu/organization.png 700w"
+                                srcset="assets/img/gioi-thieu/organization.jpg 994w, assets/img/gioi-thieu/organization.jpg 300w, assets/img/gioi-thieu/organization.jpg 768w, assets/img/gioi-thieu/organization.jpg 700w"
                                 sizes="(max-width: 994px) 100vw, 994px" /></div>
                           </div>
                         </div>
