--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -16,7 +16,7 @@
                     <img itemprop="image" class="normal"
                       src="/assets/img/logo_notext.png" alt="Logo" />
                     <img itemprop="image" class="mobile"
-                      src="assets/img/logo_notext.png" alt="Logo" /> </a>
+                      src="/assets/img/logo_notext.png" alt="Logo" /> </a>
                   <div class="clearfix">
                     <p class="company-name">CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</p>
                   </div>
