--- a/src/assets/css/bds.css
+++ b/src/assets/css/bds.css
@@ -1,3 +1,5 @@
+@font-face{font-family:'fl-icons';font-display:swap;src:url(../fonts/fl-icons.woff2) format("woff2"),url(../fonts/fl-icons.ttf) format("truetype"),url(../fonts/fl-icons.woff) format("woff")}
+
 .property-location p {
   font-size: 15px;
   line-height: 22px;
@@ -630,16 +632,23 @@
   font-size: 16px;
 }
 
-.font_gradient,.font_gradient_no {
+.landing-page-holding,
+.landing-page-holding * {
+  box-sizing: border-box;
+}
+
+.landing-page-holding .font_gradient, .landing-page-holding .font_gradient_no {
   font-weight: 700;
   display: block;
   color: #ddb60f;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-image: linear-gradient( 360deg ,#ddb60f,#d19500);
+  margin-bottom: 0.5rem;
+  text-align: inherit;
 }
 
-.font_gradient::after, .font_gradient::before {
+.landing-page-holding .font_gradient::after, .landing-page-holding .font_gradient::before {
   content: ' ';
   width: 60px;
   height: 1px;
@@ -1103,13 +1112,17 @@ section.tongquan h2 {
   border-right: solid 1px #e0e0e0;
 }
 
-.tongquan_inner {
+.tongquan_inner .row {
   background-size: cover !important;
   background-repeat: no-repeat !important;
   background-position: 50% 50%;
-  padding: 40px 0px 10px;
   background-position: left;
   background: linear-gradient(to bottom,#232461 0%,#2d4060 40%,#2d4060 100%);
+}
+
+.bg_lienketvung .left-img {
+  padding-left: 0;
+  padding-bottom: 0;
 }
 
 
@@ -1906,6 +1919,20 @@ section.tongquan h2 {
   }
 }
 
+.landing-page-holding .title {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-size: 28px;
+  line-height: 1.4;
+  text-transform: uppercase;
+  color: #423f40;
+}
+
+.landing-page-holding .container {
+  background-color: transparent;
+}
+
 .has-shadow>.col>.col-inner {
   background-color: #FFF
 }
@@ -2015,10 +2042,6 @@ table {
   margin-left: auto;
 }
 
-.landing-page-holding .font_gradient, .landing-page-holding .font_gradient_no {
-  margin-bottom: 0.5rem;
-}
-
 .landing-page-holding .col-text {
   max-width: 980px;
   margin: 10px auto;
@@ -2074,12 +2097,12 @@ img {
 
 #section_vitri .section-bg.bg-loaded {
   background: #FFFBE5 url(../img/bds/partent-line.png);
-  background-size: contain !important;
+  background-size: contain;
 }
 
-.bg_lienketvung {
+.bg_lienketvung  > .row {
   background-image: url(../img/bg_lienketvung.webp);
-  background-size: 85%!important;
+  background-size: 85%;
   background-repeat: repeat;
   background-color: #004395;
 }
@@ -2127,4 +2150,406 @@ img {
   padding: 10px 0px;
   padding-left: 47px;
   position: relative;
+}
+
+itrans-01,.itrans-02,.itrans-03,.itrans-04,.itrans-05 {
+  display: block;
+  overflow: hidden;
+}
+
+.itrans-01 {
+  display: block;
+  position: relative
+}
+
+.itrans-01:after, .itrans-01:before {
+  z-index: 1;
+  bottom: 0;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: all .6s ease 0s;
+  -moz-transition: all .6s ease 0s;
+  -webkit-transition: all .6s ease 0s;
+  -o-transition: all .6s ease 0s
+}
+
+.itrans-01:hover:before {
+  background-color: rgba(255,255,255,.5);
+  bottom: 50%;
+  top: 50%;
+  transition: all .6s ease 0s;
+  -moz-transition: all .6s ease 0s;
+  -webkit-transition: all .6s ease 0s;
+  -o-transition: all .6s ease 0s
+}
+
+.itrans-01:hover:after {
+  background-color: rgba(255,255,255,.5);
+  left: 50%;
+  right: 50%;
+  transition: all .6s ease 0s;
+  -moz-transition: all .6s ease 0s;
+  -webkit-transition: all .6s ease 0s;
+  -o-transition: all .6s ease 0s
+}
+
+.itrans-02 {
+  position: relative;
+}
+
+.itrans-02::before {
+  position: absolute;
+  top: 0;
+  left: -75%;
+  z-index: 2;
+  display: block;
+  content: '';
+  width: 50%;
+  height: 100%;
+  background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+  background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+  -webkit-transform: skewX(-25deg);
+  transform: skewX(-25deg);
+}
+
+.itrans-02:hover::before {
+  -webkit-animation: shine .75s;
+  animation: shine .75s;
+}
+
+@-webkit-keyframes shine {
+  100% {
+      left: 125%;
+  }
+}
+
+@keyframes shine {
+  100% {
+      left: 125%;
+  }
+}
+
+.itrans-03 {
+  position: relative;
+}
+
+.itrans-03::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 2;
+  display: block;
+  content: '';
+  width: 0;
+  height: 0;
+  background: rgba(255,255,255,.2);
+  border-radius: 100%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  opacity: 0;
+}
+
+.itrans-03:hover::before {
+  -webkit-animation: circle .75s;
+  animation: circle .75s;
+}
+
+@-webkit-keyframes circle {
+  0% {
+      opacity: 1;
+  }
+
+  40% {
+      opacity: 1;
+  }
+
+  100% {
+      width: 200%;
+      height: 200%;
+      opacity: 0;
+  }
+}
+
+@keyframes circle {
+  0% {
+      opacity: 1;
+  }
+
+  40% {
+      opacity: 1;
+  }
+
+  100% {
+      width: 200%;
+      height: 200%;
+      opacity: 0;
+  }
+}
+
+.itrans-04:hover img {
+  opacity: 1;
+  -webkit-animation: flash 2s;
+  animation: flash 2s;
+}
+
+@-webkit-keyframes flash {
+  0% {
+      opacity: .4;
+  }
+
+  100% {
+      opacity: 1;
+  }
+}
+
+@keyframes flash {
+  0% {
+      opacity: .4;
+  }
+
+  100% {
+      opacity: 1;
+  }
+}
+
+.itrans-05 img {
+  opacity: 1;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.itrans-05:hover img {
+  opacity: .6;
+}
+.box-image a p {
+  text-align: left;
+  color: #ffffff;
+  font-size: 16.5px;
+  position: absolute;
+  bottom: 0;
+  padding: 0 8px;
+  margin: 0px !Important;
+  overflow: hidden;
+  font-weight: 500;
+  width: 100%;
+}
+
+.box-image a p:after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,0)), to(#343434));
+  background-image: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, #343434 100%);
+  background-image: linear-gradient( -180deg , rgba(255,255,255,0) 0%, #343434 100%);
+  z-index: 0;
+}
+
+.box-image a p span {
+  z-index: 2;
+  position: relative;
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  .box-image a p {
+      font-size: 15.5px;
+  }
+}
+
+.accordion-item {
+  position: relative;
+  background: #fff;
+  box-shadow: 2px 0 6px rgb(0 0 0 / 10%);
+  border-radius: 5px;
+  margin-bottom: 15px;
+  margin-left: 0;
+}
+
+.accordion-title {
+  font-size: 110%;
+  padding: .6em 2.3em;
+  display: block;
+  position: relative;
+  border-top: 1px solid #ddd;
+  transition: border 200ms ease-out, background-color .3s
+}
+
+.accordion-title span {
+  display: inline-block;
+    vertical-align: middle;
+    line-height: 1;
+}
+
+.toggle i {
+  font-size: 1.8em;
+  transition: all .3s
+}
+
+.dark .accordion-title {
+  border-color: rgba(255,255,255,0.2)
+}
+
+.accordion-title.active {
+  border-color: #ae0d14;
+  color: #ae0d14;
+  font-weight: bold;
+  background-color: rgba(0,0,0,0.03)
+}
+
+.accordion-inner {
+  padding: 1em 2.3em;
+  display: none;
+}
+
+.dark .accordion-title.active {
+  color: #FFF
+}
+
+.accordion .toggle {
+  width: 39px;
+  height: 42px;
+  margin-right: 5px;
+  top: .3em;
+  border-radius: 999px;
+  position: absolute;
+  left: 0
+}
+
+.accordion .active .toggle {
+  top: .1em;
+  opacity: 1;
+  color: currentColor
+}
+
+.links>li>a:before,i[class^="icon-"],i[class*=" icon-"] {
+  font-family: 'fl-icons' !important;
+  font-display: block;
+  speak: none !important;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  position: relative;
+  line-height: 1.2
+}
+
+.icon-angle-up:before {
+  content: "\f106"
+}
+
+.icon-angle-down:before {
+  content: "\f107"
+}
+
+.landing-page-holding .accordion .toggle {
+  border: 0;
+  background-color: transparent;
+}
+
+.phankhu .col .image-cover {
+  box-shadow: 6px 6px 0px 0px #114853;
+}
+
+.phankhu_text {
+  background-image: linear-gradient(180deg,rgb(61 61 61 / 0%) 0%,#0c0c0c 100%);
+  border-radius: 2px;
+  overflow: hidden;
+  min-height: 52px;
+  padding-top: 12px!important;
+  padding-right: 15px!important;
+  padding-bottom: 8px!important;
+  padding-left: 15px!important;
+  margin-top: -35px!important;
+  margin-right: 15px!important;
+  margin-left: 15px!important;
+  z-index: 10;
+  position: relative;
+  color: #ffffff!important;
+  margin-bottom: 3.093%;
+}
+
+.phankhu_text .phankhu_text_inner {
+  padding-bottom: 0;
+  color: #ffffff!important;
+  position: relative;
+}
+
+.phankhu_text .phankhu_text_inner h3 {
+  font-weight: bold;
+  font-size: 16px;
+  color: #e8de8b!important;
+  line-height: 25px;
+  margin-bottom: 0px;
+  background: linear-gradient(to right, #f5bf44, #e0b936, #d1c631, #be9945, #dfc94e, #c2b836, #be9945);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.phankhu_text .phankhu_text_inner p {
+  margin-bottom: 0;
+  color: #ffffff!important;
+  position: relative;
+  padding-bottom: 0;
+}
+
+.phankhu_button {
+  text-align: center;
+}
+
+.phankhu_button a {
+  color: #e2984d;
+  text-transform: none;
+  border-radius: 2px;
+  text-transform: none;
+  background-color: #fff;
+  border: 2px solid #e2984d;
+  margin-right: 1em;
+    text-shadow: none;
+    line-height: 2.4em;
+    min-height: 2.5em;
+    padding: 0 1.2em;
+    max-width: 100%;
+    transition: transform .3s, border .3s, background .3s, box-shadow .3s, opacity .3s, color .3s;
+    text-rendering: optimizeLegibility;
+    box-sizing: border-box;
+    display: inline-block;
+}
+
+.phankhu_button a:hover {
+  background-color: #e2984d;
+  color: #fff;
+}
+
+@media only screen and (min-width: 550px) and (max-width: 820px) {
+  .phankhu_text {
+      min-height: 52px;
+      padding-top: 10px!important;
+      padding-right: 0px!important;
+      padding-bottom: 6px!important;
+      padding-left: 10px!important;
+      margin-top: -38px!important;
+      margin-right: 0px!important;
+      margin-left: 0px!important;
+  }
+
+  .phankhu_text .phankhu_text_inner p {
+      font-size: 14px!important;
+  }
+}
+.col-inner>.img:not(:last-child), .col>.img:not(:last-child) {
+  margin-bottom: 1em;
+}
+
+.img .img-inner {
+  position: relative;
+  overflow: hidden
 }
