--- a/src/gioi-thieu.ejs
+++ b/src/gioi-thieu.ejs
@@ -404,15 +404,23 @@
                     </div>
                   </div>
                   <div
-                    class="wpb_animate_when_almost_visible wpb_slideInRight slideInRight wpb_column vc_column_container vc_col-sm-6">
+                    class="wpb_animate_when_almost_visible wpb_slideInRight slideInRight wpb_column vc_column_container vc_col-sm-6" style="padding-bottom: 20px;">
                     <div class="vc_column-inner vc_custom_1527655481830">
                       <div class="wpb_wrapper">
                         <div class="wpb_text_column wpb_content_element  nong_san_tho_text">
                           <div class="wpb_wrapper">
                             <h3>Cơ cấu tổ chức</h3>
-                            <p>Công ty Cổ phần Đầu tư Công nghệ Minh Anh ( Minh Anh Group ) là doanh nghiệp hàng đầu trong lĩnh vực Thương mại hàng Nông sản, Nguyên liệu thô, Premix và Chất phụ gia sử dụng trong ngành sản xuất thức chăn nuôi tại Việt Nam.</p>
-                            <p>Trong suốt chặng đường hình thành và phát triển, Minh Anh Group đã dần khẳng định vị thế của mình trên thương trường thông qua việc trở thành Nhà phân phối độc quyền của những thương hiệu lớn trên thế giới như DSM, Diamond V, Olmix, Massel …&#8230;</p>
-                            <p>Với tiềm lực mạnh mẽ, đội ngũ nhân viên giàu kỹ năng, kinh nghiệm trong ngành chăn nuôi chính là cơ sở vững chắc để Minh Anh Group phát triển bền vững &amp; lâu dài.</p>
+                            <p>Công ty Minh Anh là một công ty cổ phần đầu tư công nghệ với cơ cấu tổ chức chuyên nghiệp và hiệu quả.</p>
+                            <p> Hội đồng quản trị chịu trách nhiệm giám sát và định hướng chiến lược phát triển.</p>                          
+                            <p>Ban Tổng Giám đốc dẫn dắt công ty với tầm nhìn chiến lược và tinh thần lãnh đạo mạnh mẽ. </p>
+                          </br>
+                            <p>Phòng Kỹ thuật tập trung vào nghiên cứu và ứng dụng công nghệ tiên tiến.</p>
+                            <p>Phòng Tài chính Kế toán đảm bảo quản lý tài chính hiệu quả và báo cáo tài chính minh bạch.</p>
+                            <p>Phòng Kinh doanh xây dựng mối quan hệ chặt chẽ với đối tác và khách hàng để phát triển thị trường.</p>
+                            <p>Phòng Nhân sự tập trung vào phát triển nguồn nhân lực tài năng và tạo môi trường làm việc thuận lợi.</p>
+                            <p>Phòng Nghiên cứu thị trường cung cấp thông tin phân tích thị trường hữu ích giúp định hình chiến lược kinh doanh.</p>
+                          </br>
+                            <p>Với cơ cấu tổ chức chuyên nghiệp và sự đam mê của đội ngũ, Công ty Minh Anh tự tin vươn lên thành công ty hàng đầu trong lĩnh vực đầu tư công nghệ và đem lại giá trị cao cho khách hàng và cổ đông.</p>
                           </div>
                         </div>
                       </div>
