--- a/src/bds/minh-anh-park-hill-cu-chi.ejs
+++ b/src/bds/minh-anh-park-hill-cu-chi.ejs
@@ -38,7 +38,7 @@
               <div class="title title_size_small  position_right " style="height:180px;">
                 <div class="image responsive"><img width="950" height="540"
                   src="/assets/img/bds/banner.png"
-                  alt="Minh Anh Group Golden Avenue Móng Cái " /></div>
+                  alt="Minh Anh Park Hill Củ Chi " /></div>
                 <div class="title_holder">
                   <div class="container">
                     <div class="container_inner clearfix">
@@ -82,11 +82,11 @@
                                       <p
                                         style="line-height: 1.38; margin-top: 0pt; margin-bottom: 10pt; text-align: justify;">
                                         <span id="docs-internal-guid-7e342ecd-7fff-8871-8eff-3e620853fdd2"><span
-                                            style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; vertical-align: baseline; white-space-collapse: preserve;">Minh Anh Park Hill Củ Chi Móng Cái - Dự án được triển khai với quy mô là một KĐT hiện đại; đẳng cấp do Minh Anh Group làm chủ đầu tư với tổng diện tích quy mô 116 ha toạ lạc tại cầu Bắc Luân II - thành phố Móng Cái - tỉnh Quảng Ninh.</span></span></p>
+                                            style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; vertical-align: baseline; white-space-collapse: preserve;">Minh Anh Park Hill Củ Chi - Dự án được triển khai với quy mô là một KĐT hiện đại; đẳng cấp do Minh Anh Group làm chủ đầu tư với tổng diện tích quy mô 116 ha toạ lạc tại cầu Bắc Luân II - thành phố Củ Chi - tỉnh Quảng Ninh.</span></span></p>
                                       <p
                                         style="line-height: 1.38; margin-top: 0pt; margin-bottom: 10pt; text-align: justify;">
                                         <span id="docs-internal-guid-7e342ecd-7fff-8871-8eff-3e620853fdd2"><span
-                                            style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; vertical-align: baseline; white-space-collapse: preserve;">Sự ra đời của dự án tạo cơn sốt trên thị trường BĐS khi đón đầu sự phát triển hạ tầng khi nằm ngay khu vực có lợi thế lớn về kinh tế chiến lược. Móng Cái từ trước tới nay là điểm trung chuyển và giao thương kinh tế - dịch vụ - du lịch kết nối giữa hai nước Việt - Trung. Tiềm năng sinh lời của các CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH không giới hạn tạo điểm nhấn thu hút các nhà đầu tư trong khoảng thời gian sắp tới.</span></span></p>
+                                            style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; vertical-align: baseline; white-space-collapse: preserve;">Sự ra đời của dự án tạo cơn sốt trên thị trường BĐS khi đón đầu sự phát triển hạ tầng khi nằm ngay khu vực có lợi thế lớn về kinh tế chiến lược. Củ Chi từ trước tới nay là điểm trung chuyển và giao thương kinh tế - dịch vụ - du lịch kết nối giữa hai nước Việt - Trung. Tiềm năng sinh lời của các sản phẩm không giới hạn tạo điểm nhấn thu hút các nhà đầu tư trong khoảng thời gian sắp tới.</span></span></p>
                                       <div></div>
                                     </div>
                                 </div>
@@ -174,7 +174,7 @@
                                         <div class="box-text text-center">
                                           <div class="box-text-inner">
                                             Dự án được quy hoạch thành một khu phức hợp với vị trí tọa lạc tại phường
-                                            Hải Hoà, thành phố Móng Cái ngay liền kề lài sông Ka Long; cầu Bắc Luân 2;
+                                            Hải Hoà, thành phố Củ Chi ngay liền kề lài sông Ka Long; cầu Bắc Luân 2;
                                             cửa khẩu Bắc Luân 2;…có tiềm năng giao thương và đầu tư sinh lời hấp dẫn.
                                           </div>
                                         </div>
@@ -249,7 +249,7 @@
                                   <div class="row align-middle align-center" style="max-width: 800px;margin: auto;">
                                     <div class="col small-12 medium-4 large-4">
                                       <img width="60" height="75"
-                                        src="https://batdongsanexpress.vn/template_detail/img/icon-banggia.png"
+                                        src="/assets/img/bds/icon-banggia.png"
                                         alt="Icon bảng giá" /> Bảng giá tháng 07/2023
                                     </div>
                                     <div class="col small-12 medium-4 large-4">
@@ -267,7 +267,7 @@
                                 </div>
                                 <div class="col-inner">
                                   <form action="#" method="post" id="frm_018" class="wpcf7-form">
-                                    <input name="title" type="hidden" value="Minh Anh Group Golden Avenue Móng Cái ">
+                                    <input name="title" type="hidden" value="Minh Anh Park Hill CỦ CHI ">
                                     <input name="_url" type="hidden"
                                       value="https://batdongsanexpress.vn/Minh Anh Group-golden-avenue-mong-cai.html">
                                     <div class="row">
@@ -293,7 +293,7 @@
                                 <div class="section-content relative">
                                   <div class="col-inner text-center">
                                     <h2 class="font_gradient_no text-uppercase"><span>Vị trí đắt
-                                        giá</span><br />Minh Anh Group Golden Avenue Móng Cái </h2>
+                                        giá</span><br />Minh Anh Park Hill CỦ CHI </h2>
                                   </div>
                                   <div class="row">
                                     <div class="col small-12 large-12">
@@ -312,10 +312,9 @@
                                       <div class="col small-12 large-6 medium-12 p0 left-img">
                                         <div class="img-inner dark">
                                           <a data-fancybox="img-vitri" data-type="image"
-                                            href="asset/img/bds/minhanh_cuchi_lienketvung.png">
+                                            href="">
                                             <img class="lazy" width="1200" height="1000"
-                                              src="data:image/gif;base64,R0lGODdhAQABAPAAAP///wAAACwAAAAAAQABAEACAkQBADs="
-                                              data-src="asset/img/bds/minhanh_cuchi_lienketvung.png"
+                                              src="/assets/img/bds/minhanh_cuchi_lienketvung.png"                                              
                                               alt="Minh Anh Park Hill Củ Chi" />
                                           </a>
                                         </div>
@@ -328,6 +327,9 @@
                                             <li><span class="num">1</span> Cách trung tâm Thành Phố 22 KM</li>
                                             <li><span class="num">2</span> Cách trung tâm Thủ Dầu Một 5 KM</li>
                                             <li><span class="num">3</span> Cách ngã tư Tân Quy 3 KM</li>
+                                            <li><span class="num">4</span> Cách chợ Hóc Môn 10 KM</li>
+                                            <li><span class="num">5</span> Cách Đông Thạnh Quận 12 10 KM</li>
+                                            <li><span class="num">6</span> Cách quốc lộ 22 14 KM</li>
                                           </ul>
                                         </div>
                                       </div>
@@ -340,7 +342,7 @@
                                 <div class="section-content relative">
                                   <div class="col-inner text-center">
                                     <h2 class="font_gradient_no text-uppercase"><span>Tiện ích cao cấp
-                                      </span><br />Minh Anh Group Golden Avenue Móng Cái </h2>
+                                      </span><br />Minh Anh Park Hill Củ Chi </h2>
                                   </div>
                                   <div class="row">
                                     <div class="col small-12 large-12">
@@ -409,8 +411,8 @@
                                     <div id="col-150993186" class="col small-12 large-12">
                                       <div class="col-inner">
                                         <div class="text-center container section-title-container">
-                                          <p class="title font_gradient">CÂU HỎI THƯỜNG GẶP VỀ Minh Anh Group Golden Avenue
-                                            Móng Cái </p>
+                                          <p class="title font_gradient">CÂU HỎI THƯỜNG GẶP VỀ Minh Anh Park Hill Củ Chi
+                                            Củ Chi </p>
                                         </div>
                                         <div class="accordion">
                                           
@@ -418,10 +420,10 @@
                                             <a href="#" class="accordion-title plain">
                                               <button class="toggle" aria-label="Toggle"><i
                                                   class="icon-angle-down"></i></button>
-                                              <span> Minh Anh Group Golden Avenue có diện tích bao nhiêu?</span>
+                                              <span> Minh Anh Park Hill Củ Chi có diện tích bao nhiêu?</span>
                                             </a>
                                             <div class="accordion-inner">
-                                              Theo như quy hoạch, dự án Minh Anh Group Golden Avenue có tổng diện tích rộng
+                                              Theo như quy hoạch, dự án Minh Anh Park Hill Củ Chi có tổng diện tích rộng
                                               rãi vào khoảng 116 ha. </div>
                                           </div>
                                         </div>
@@ -441,7 +443,7 @@
                                         <div class="img has-hover x md-x lg-x y md-y lg-y" style="width: 100%;">
                                           <div class="img-inner image-cover dark">
                                             <a target="_blank" title="Eco Village Saigon River"
-                                              href="/bds/vinhomes-golden-avenue-mong-cai.html"
+                                              href="/bds/minh-anh-park-hill-cu-chi.html"
                                               class="itrans-01" style="position: unset;" data-wpel-link="internal">
                                               <img alt="Eco Village Saigon River" width="600" height="400"
                                                 src="/assets/img/bds/ecopark-nhon-trach-dong-nai-31-370x290.jpg" />
@@ -449,13 +451,13 @@
                                           </div>
                                           <div class="phankhu_text">
                                             <div class="phankhu_text_inner">
-                                              <h3>Eco Village Saigon River</h3>
+                                              <h3>Minh Anh Park Hill Hóc Môn</h3>
                                             </div>
                                           </div>
                                         </div>
                                         <div class="phankhu_button">
                                           <a target="_blank"
-                                            href="https://batdongsanexpress.vn/eco-park-nhon-trach-dong-nai.html" class="button" data-wpel-link="internal">
+                                            href="" class="button" data-wpel-link="internal">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="14"
                                               fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
                                               <path
